--- a/pom.xml
+++ b/pom.xml
@@ -67,12 +67,19 @@
 		<dependency>
 			<groupId>org.twitter4j</groupId>
 			<artifactId>twitter4j-core</artifactId>
-			<version>2.1.7</version>
+			<version>2.2.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.podio</groupId>
 			<artifactId>api</artifactId>
-			<version>0.5.2-SNAPSHOT</version>
+			<version>0.6.3-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-stream</artifactId>
+			<version>2.2.4</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
