--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>com.podio</groupId>
 			<artifactId>api</artifactId>
-			<version>0.7.2-SNAPSHOT</version>
+			<version>0.7.3</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
