Update to support Twitter API v. 1.1

--- a/example.config.properties
+++ b/example.config.properties
@@ -1,5 +1,7 @@
 twitter.token=token
 twitter.secret=secret
+twitter.access_token=token
+twitter.access_token_secret=secret
 podio.client.mail=client@example.com
 podio.client.secret=secret
 podio.user.mail=user@example.com
