--- a/pom.xml
+++ b/pom.xml
@@ -73,17 +73,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.twitter4j</groupId>
-			<artifactId>twitter4j-core</artifactId>
-			<version>2.2.5</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<artifactId>twitter4j-stream</artifactId>
+			<version>3.0.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.twitter4j</groupId>
-			<artifactId>twitter4j-stream</artifactId>
-			<version>2.2.5</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<artifactId>twitter4j-core</artifactId>
+			<version>3.0.4-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
 		</dependency>
 	</dependencies>
 </project>
